--- a/app/index.vm
+++ b/app/index.vm
@@ -48,6 +48,8 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/directives/tile.js"></script>
+    <script src="scripts/services/grid.js"></script>
     <!-- endbuild --><!-- scripts -->
 
     <!-- #if( false ) -->
