--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -1,17 +1,20 @@
 %h1 This is ng-minesweeper
 
-.parameters{:"ng-controller" => "MainCtrl as main"}
-  %form{:"ng-submit" => "main.generate(main.gridWidth, main.gridHeight, main.numOfMines)"}
-    %input{:"ng-model" => "main.gridWidth", :"placeholder" => "Grid Width", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
-    %span &times
-    %input{:"ng-model" => "main.gridHeight", :"placeholder" => "Grid Height", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
-    %span and
-    %input{:"ng-model" => "main.numOfMines", :"placeholder" => "How many mines?", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
-    %input{:"type" => "submit", :"value" => "Go!"}
-
-.content
-  %table
-
-
+.content{:"ng-controller" => "MainCtrl as main"}
+  .parameters
+    %form{:"ng-submit" => "main.generate(main.gridWidth, main.gridHeight, main.numOfMines)"}
+      %input{:"ng-model" => "main.gridWidth", :"placeholder" => "Grid Width", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %span &times
+      %input{:"ng-model" => "main.gridHeight", :"placeholder" => "Grid Height", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %span and
+      %input{:"ng-model" => "main.numOfMines", :"placeholder" => "How many mines?", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %input{:"type" => "submit", :"value" => "Go!"}
+  %hr
+  .grid-wrapper
+    .status-bar
+      %input{:"ng-value" => "main.grid.numMarked", :"readonly" => "true"}
+    %table{:"class" => "grid"}
+      %tr{:"ng-repeat" => "row in main.grid.board track by $index"}
+        %td{:"ng-repeat" => "cell in row track by $index"} {{cell}}
 
 
