--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,3 +22,32 @@ $font-helvetica75: "HelveticaNeueW01-75Bold", "HelveticaNeueW02-75Bold", "Helvet
 .content .status-bar {
   margin-top: 10px;
 }
+
+.grid-wrapper {
+  user-select: none;
+  .grid {
+    border-spacing: 0;
+    margin-top: 10px;
+  }
+  .tile {
+    padding: 2px;
+    background-color: lightcyan;
+    border: 1px solid grey;
+    cursor: default;
+    text-align: center;
+    width: 20px;
+    height: 20px;
+  }
+  .discovered {
+    box-shadow: inset 0 0 3px grey;
+    background-color: lightgray;
+  }
+  .marked {
+    box-shadow: inset 0 0 3px #0cdc00;
+    background: rgba(131, 255, 71, 0.71);
+  }
+  .mined {
+    box-shadow: inset 0 0 3px #dc0500;
+    background: rgba(255, 28, 28, 0.71);
+  }
+}
