--- a/app/views/tile.haml
+++ b/app/views/tile.haml
@@ -1,1 +1,2 @@
-.tile{:"ng-transclude" => "true", :"ng-click" => "reveal()", :"right-click" => "toggle()"}
+.tile{:"ng-click" => "reveal()", :"right-click" => "toggle()"}
+  %span{:"class" => "tile-content", :"ng-transclude" => "true"}
