--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -3,11 +3,11 @@
 .content{:"ng-controller" => "MainCtrl as main"}
   .parameters
     %form{:"ng-submit" => "main.generate(main.gridWidth, main.gridHeight, main.numOfMines)"}
-      %input{:"ng-model" => "main.gridWidth", :"placeholder" => "Grid Width", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %input{:"ng-model" => "main.gridWidth", :"placeholder" => "Grid Width", :"type" => "number", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
       %span &times
-      %input{:"ng-model" => "main.gridHeight", :"placeholder" => "Grid Height", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %input{:"ng-model" => "main.gridHeight", :"placeholder" => "Grid Height", :"type" => "number", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
       %span and
-      %input{:"ng-model" => "main.numOfMines", :"placeholder" => "How many mines?", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %input{:"ng-model" => "main.numOfMines", :"placeholder" => "How many mines?", :"type" => "number", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
       %input{:"type" => "submit", :"value" => "Go!"}
   %hr
   .grid-wrapper
