--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -3,11 +3,11 @@
 .content{:"ng-controller" => "MainCtrl as main"}
   .parameters
     %form{:"ng-submit" => "main.generate(main.gridWidth, main.gridHeight, main.numOfMines)"}
-      %input{:"ng-model" => "main.gridWidth", :"placeholder" => "Grid Width", :"type" => "number", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %input{:"ng-model" => "main.gridWidth", :"placeholder" => "Grid Width", :"type" => "number", :"required" => "true"}
       %span &times
-      %input{:"ng-model" => "main.gridHeight", :"placeholder" => "Grid Height", :"type" => "number", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %input{:"ng-model" => "main.gridHeight", :"placeholder" => "Grid Height", :"type" => "number", :"required" => "true"}
       %span and
-      %input{:"ng-model" => "main.numOfMines", :"placeholder" => "How many mines?", :"type" => "number", :"ng-pattern" => "/^[0-9]{1,2}$/", :"required" => "true"}
+      %input{:"ng-model" => "main.numOfMines", :"placeholder" => "How many mines?", :"type" => "number", :"required" => "true"}
       %input{:"type" => "submit", :"value" => "Go!"}
   %hr
   .grid-wrapper
@@ -16,7 +16,7 @@
     %table{:"class" => "grid"}
       %tr{:"ng-repeat" => "row in main.grid.board track by $index"}
         %td{:"ng-repeat" => "tile in row track by $index"}
-          %tile{:"x" => "{{$parent.$index}}", :"y" => "{{$index}}", :"grid" => "main.grid", :"value" => "tile"}
+          %tile{:"x" => "{{$parent.$index}}", :"y" => "{{$index}}", :"grid" => "main.grid", :"tile" => "tile"}
 
     -#%table{:"class" => "grid"}
     -#  %tr{:"ng-repeat" => "row in main.grid.mines track by $index"}
